@@ -1,5 +1,14 @@
 2004-08-02  Andrew Cagney  <cagney@gnu.org>
 
+	* dummy-frame.c (struct dummy_frame): Delete call_lo, call_hi, top
+	and pc.  Update comments.
+	(pc_in_dummy_frame): Delete function.
+	(deprecated_pc_in_call_dummy): Inline old pc_in_dummy_frame code,
+	use the "id".
+	(dummy_frame_push, dummy_frame_sniffer): Instead of call_lo,
+	call_hi, top and pc, use the id.
+	(fprint_dummy_frames): Do not print call_lo, call_hi, top and pc.
+
 	* dummy-frame.c: Include "gdb_string.h".
 	(generic_save_call_dummy_addr, generic_push_dummy_frame)
 	(generic_save_dummy_frame_tos): Delete.
